--- a/Snack 1/index.html
+++ b/Snack 1/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="lightest">
+    <p></p>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
